use lzo compression in snap

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,6 +8,8 @@ confinement: strict
 icon: snap/gui/icon.png
 base: core18
 
+compression: lzo
+
 architectures:
   - build-on: amd64
     run-on: amd64
