--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/pixel"]
 	path = src/pixel
-	url = git@github.com:keshavbhatt/pixel.git
+	url = https://github.com/keshavbhatt/pixel.git
